Mise à jour du README reflétant l'état actuel du projet et les livrables du sujet 5